--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
     "ng": "ng",
     "start": "ng serve -o",
     "build": "ng build",
+    "build:github": "npm run delete:docs && npm run build:href && npm run copy:dist",
+    "delete:docs": "del docs",
+    "build:href": "ng build --base-href ./",
+    "copy:dist": "copyfiles dist/bases/* ./docs -f",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -29,6 +33,8 @@
     "@angular/compiler-cli": "^15.2.0",
     "@types/jasmine": "~4.3.0",
     "@types/uuid": "^9.0.1",
+    "copyfiles": "^2.4.1",
+    "del-cli": "^5.0.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
